# tccp-playground

./: .gitignore  LICENSE  PRODUCTION.md  README.md  cursor.md  status.md
k6-benchmarks/: README.md  delivery_test.js  full_tpcc_test.js  payment_test.js  sysbench_equivalent.sh  tpc_c_http.js
results/m1-pro-axum/: analysis.md  results.txt
rust-axum-rest-api/: Cargo.toml  README.md
rust-axum-rest-api/migrations/: 001_create_tpcc_tables.sql  002_create_indexes.sql
rust-axum-rest-api/scripts/: test_endpoints.nu
rust-axum-rest-api/src/: handlers.rs  lib.rs  main.rs  models.rs
rust-axum-rest-api/src/handlers/: customers.rs  delivery.rs  districts.rs  items.rs  new_order.rs  order_status.rs  orders.rs  payment.rs  stock_level.rs  warehouses.rs
rust-axum-rest-api/src/models/: customer.rs  district.rs  history.rs  item.rs  new_orders.rs  order_line.rs  orders.rs  stock.rs  warehouse.rs
rust-axum-rest-api/tests/: test_integration_simple.rs  test_simple.rs
rust-axum-rest-api/tests/common/: mod.rs
sysbench-tpcc/: README.md  benchmark.sh  docker-compose.yml  prepare.sh
ui-vite-react/: README.md  package-lock.json  package.json  vite.config.ts
ui-vite-react/src/: main.tsx  routeTree.gen.ts
ui-vite-react/src/components/: CustomerAutocomplete.tsx  DistrictSelect.tsx  ItemAutocomplete.tsx  OrderConfirmation.tsx  OrderDetails.tsx  OrderLines.tsx  OrderList.tsx  OrderSearch.tsx  SupplyWarehouseSelect.tsx  WarehouseSelect.tsx
ui-vite-react/src/config/: api.ts
ui-vite-react/src/hooks/: useCustomers.ts  useDistricts.ts  useItems.ts  useOrderStatus.ts  useOrders.ts  (+2 more)
(+12 files in other folders)
