[package]
name = "rust-axum-rest-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "postgres", "bigdecimal", "migrate"] }
bigdecimal = { version = "0.4", features = ["serde"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tower = "0.5.2"
hyper = { version = "1.0", features = ["full"] }
http-body-util = "0.1.2"
reqwest = { version = "0.12", features = ["json"] }
tower-service = "0.3"
